[Add] Migrate From Local Project to Git project

--- a/Sadad/API/appsettings.json
+++ b/Sadad/API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-T7INA25\\SQL_2017; Initial Catalog=TestOrder;User ID=sa;Password=123456;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
