[Fix] Change Connection String

--- a/Sadad/API/appsettings.json
+++ b/Sadad/API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Localhost; Initial Catalog=TestOrder;User ID=sa;Password=123456;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=DESKTOP-T7INA25\\SQL_2017; Initial Catalog=TestOrder;User ID=sa;Password=123456;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
